--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,21 @@
 body {
-    background-color: darkcyan;
+    background-color: lightskyblue;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.assighment {
+    display: flex;
+    padding: 10px;
+    margin: 10px;
+    background: lightpink
+}
+
+.assighment img {
+    width: 200px;
+    padding: 10px;
+}
+
 h1{
-    color:darkred;
+    color: darkgreen;
     text-align:center;
 }
