--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,16 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.assighment {
+.assighments {
     display: flex;
+    flex-wrap:wrap;
+}
+
+.assighment {
+    width: 22%;
     padding: 10px;
     margin: 10px;
+    padding: 20px 10;
     background: lightpink
 }
 
@@ -14,6 +20,8 @@ body {
     width: 200px;
     margin: 10px;
     border: 4px solid rgb(26, 90, 116);
+    display: block;
+    margin: auto;
 }
 
 .assighment img:hover {
@@ -27,6 +35,10 @@ h1 {
 
 h1:hover {
     color:beige;
+}
+
+h2 {
+    text-align: center;
 }
 
 a {
